cabal-version:      3.0
name:               transmission
version:            0.1.0.0
-- synopsis:
-- description:
license:            Unlicense
license-file:       LICENSE
author:             Koncepto Sociala
maintainer:         sanerhp.mail@gmail.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable transmission
    import:           warnings
    main-is:          Main.hs
    other-modules:    
        Paths_transmission,
        MainMenu,
        Game,
        GameState,
        Options,
        Utils,
        Level,
        Level.Mesh,
        Level.Binary,
        LevelEditor
    -- other-extensions:
    build-depends:
        vector ^>=0.13.2.0,
        binary ^>=0.8.9.1,
        bytestring ^>=0.11.5.4,
        bitvec ==1.1.5.0,
        base,
        h-raylib
    hs-source-dirs:   exe
    default-language: GHC2021
